--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    <script>
+      const options = {
+        label: "🌓",
+      };
+
+      function addDarkmodeWidget() {
+        const darkmode = new Darkmode(options);
+        darkmode.showWidget();
+      }
+      window.addEventListener("load", addDarkmodeWidget);
+    </script>
   </body>
 </html>
